# puzzle-bot

./: README.md  Setup.md  corners.py  pyproject.toml
example_data/03_pieces_all/: L1060487_copy_WHITE_clear_bg.xcf  README.md
src/puzzle_bot/: __init__.py  __main__.py  corners.py  load_image.py  outline.py  splines.py
