[project]
name = "puzzle-bot"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Anita Lipsky", email = "anita@purplebugs.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
"puzzle-bot" = "puzzle_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/puzzle_bot"]
